--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,14 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.1.Final</version>
+    </dependency>
   </dependencies>
+
   <build>
     <finalName>CRUDApp</finalName>
     <plugins>
